:bug: Fix auto wrap in git block and tips wrong shape in tips block

--- a/src/less/git.less
+++ b/src/less/git.less
@@ -54,6 +54,7 @@
           background-color: #3478CD;
           padding: 3px 5px;
           border-radius: 3px;
+          white-space: nowrap;
         }
       }
 
