--- a/src/less/tips.less
+++ b/src/less/tips.less
@@ -25,11 +25,14 @@
 
   &&:after {
     font-family: "iconfont", serif !important;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
     font-size: 14px;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    padding: 3px;
     border-radius: 50%;
     color: #F4F4F4;
     background-color: #818181;
